# rust-samples

./: .gitignore  AGENTS.md  Cargo.toml
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
algorithm/: Cargo.toml
game/: Cargo.toml
game/chinese-chess/: Cargo.toml
game/chinese-chess/src/: main.rs
game/src/: main.rs
misc/: Cargo.toml
web/blog/: Cargo.toml
web/blog-client/: Cargo.toml
web/blog-client/src/: lib.rs
web/blog-client/src/content/: mod.rs
web/blog-spring/: Cargo.toml
web/blog/src/controller/: article.rs  mod.rs
web/blog/src/domain/content/: mod.rs
web/blog/src/infra/repository/: mod.rs
web/blog/src/service/: article.rs
web/w-ddd/: Cargo.toml
web/w-ddd/src/: error.rs  lib.rs  mapper.rs  repository.rs
web/w-macro/: Cargo.toml
web/w-macro/src/: lib.rs
web/w-spring/: Cargo.toml
